--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   },
   "contributors": [],
   "scripts": {
-    "dev": "nodemon",
-    "test": ""
+    "dev": "nodemon index.js",
+    "test": "",
+     "start" : "node index.js"
+
   },
+
   "dependencies": {
     "express": "^4.18.1"
   }
